# ITKANTsWasm

./: CMakeLists.txt  README.rst  itk-module.cmake  pyproject.toml  setup.py
.github/workflows/: build-test-package.yml
include/: itkANTSGroupwiseBuildTemplate.h  itkANTSGroupwiseBuildTemplate.hxx  itkANTSGroupwiseRegistration.h  itkANTSGroupwiseRegistration.hxx  itkANTSRegistration.h  itkANTSRegistration.hxx  itkANTsGroupwiseRegistration.h  itkANTsGroupwiseRegistration.hxx  itkANTsRegistration.h  itkANTsRegistration.hxx  itkMinimalStandardRandomVariateGenerator.h
src/: CMakeLists.txt
test/: CMakeLists.txt  itkANTSGroupwiseRegistrationTest3D.cxx  itkANTSGroupwiseRegistrationTestFaces.cxx  itkANTSRegistrationBasicTests.cxx  itkANTSRegistrationTest.cxx  itkANTsGroupwiseRegistrationTest.cxx  itkANTsGroupwiseRegistrationTest3D.cxx  itkANTsGroupwiseRegistrationTestFaces.cxx  itkANTsRegistrationBasicTests.cxx  itkANTsRegistrationTest.cxx
test/Baseline/: BrainSlicesTemplate.nrrd.cid  PythonANTsGroupwiseBrainSlices.nrrd.cid  PythonANTsGroupwiseFaces.png.cid  T_template0Result.nrrd.cid  T_template0Result.png.cid  T_template0Result337.nrrd.cid  antsRegistrationTest_AffineRotationMasks.result.nii.gz.cid  antsRegistrationTest_AffineRotationNoMasks.result.nii.gz.cid  antsRegistrationTest_AffineScaleMasks.result.nii.gz.cid  antsRegistrationTest_AffineTranslationMasks.result.nii.gz.cid  antsRegistrationTest_AffineTranslationNoMasks.result.nii.gz.cid  antsRegistrationTest_CCSimilarityRotationMasks.result.nii.gz.cid  antsRegistrationTest_MSEAffineRotationMasks.result.nii.gz.cid  antsRegistrationTest_MSESimilarityRotationMasks.result.nii.gz.cid  antsRegistrationTest_MSESimilarityRotationMasks_Float.result.nii.gz.cid  antsRegistrationTest_RigidAnisotropicMasks.result.nii.gz.cid  antsRegistrationTest_RigidRotationNoMasks.result.nii.gz.cid  antsRegistrationTest_SimilarityRotationMasks.result.nii.gz.cid  antsRegistrationTest_SyNScaleNoMasks.result.nii.gz.cid  antsRegistrationTest_SyNScaleNoMasks_Float.result.nii.gz.cid  itkANTSRegistrationTestOutput.mha.cid  itkANTsGroupwiseRegistrationTestAffine.png.cid  itkANTsGroupwiseRegistrationTestFacesDirectSyN.png.cid
test/Input/: ANON0006_20_T1_dbg_splayed.nii.gz.cid  ANON0006_20_T1_sag_twisted.nii.gz.cid  Initializer_0.05_antsRegistrationTest_AffineScaleMasks_Float.mat  Initializer_0.05_antsRegistrationTest_RigidRotationNoMasks_Float.mat  Initializer_antsRegistrationTest_AffineTranslationMasks.mat  Initializer_antsRegistrationTest_RigidAnisotropicMasks.mat  OASIS-TRT-20-10Slice121.nii.gz.cid  OASIS-TRT-20-11Slice121.nii.gz.cid  OASIS-TRT-20-12Slice121.nii.gz.cid  OASIS-TRT-20-13Slice121.nii.gz.cid  OASIS-TRT-20-14Slice121.nii.gz.cid  OASIS-TRT-20-15Slice121.nii.gz.cid  OASIS-TRT-20-16Slice121.nii.gz.cid  OASIS-TRT-20-17Slice121.nii.gz.cid  OASIS-TRT-20-18Slice121.nii.gz.cid  (+19 more)
wrapping/: CMakeLists.txt  itkANTSGroupwiseBuildTemplate.wrap  itkANTSGroupwiseRegistration.wrap  itkANTSRegistration.wrap  itkANTsGroupwiseRegistration.wrap  itkANTsRegistration.wrap
(+7 files in other folders)
